other-mpol/replace-image-registry-with-harbor/.chainsaw-test/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: replace-image-registry-with-harbor
spec:
  steps:
  - name: step-01
    try:
    - apply:
        file: ../replace-image-registry-with-harbor.yaml
    - assert:
        file: policy-ready.yaml
  - name: step-02
    try:
    - apply:
        file: ../.kyverno-test/resource.yaml
    - assert:
        file: ../.kyverno-test/patchedResource.yaml
    - assert:
        file: ../.kyverno-test/patchedResource2.yaml
